--- a/src/pages/login/Login.scss
+++ b/src/pages/login/Login.scss
@@ -23,7 +23,7 @@
     font-weight: bold;
   }
 
-  input[type="email"],
+  input[type="username"],
   input[type="password"] {
     width: 100%;
     padding: 10px;
