--- a/src/pages/home/Home.scss
+++ b/src/pages/home/Home.scss
@@ -1,5 +1,4 @@
 .home {
-  width: auto;
   .features {
     background-color: #f1fdf7;
     display: flex;
@@ -57,7 +56,7 @@
           flex: 3;
         }
 
-        img {
+        img{
           width: 100%;
         }
         h1 {
@@ -84,7 +83,7 @@
           letter-spacing: 1px;
         }
 
-        video {
+        video{
           width: 720px;
         }
       }
@@ -107,7 +106,7 @@
     .container {
       width: 1400px;
 
-      h1 {
+      h1{
         color: #555;
       }
 
@@ -133,19 +132,19 @@
             height: 50px;
           }
 
-          .line {
+          .line{
             width: 50px;
             height: 2px;
             background-color: lightgray;
-            transition: all 0.3s ease;
+            transition: all .3s ease;
           }
 
           span {
             font-weight: 300;
           }
 
-          &:hover {
-            .line {
+          &:hover{
+            .line{
               width: 80px;
               background-color: #1dbf73;
             }
