--- a/src/pages/gigs/Gigs.scss
+++ b/src/pages/gigs/Gigs.scss
@@ -1,23 +1,25 @@
 .gigs {
   width: 100%;
-  display: flex;
-  justify-content: center;
+  min-height: 100vh; /* Ensure a minimum height to cover the viewport */
+  background-color: #f7f7f7; /* Add a background color to your container */
+  margin-top: 2000px;
+  
 
   .container {
-    width: 1400px;
-    padding: 30px 0px;
-    display: flex;
-    flex-direction: column;
-    gap: 15px;
+    max-width: 1400px; /* Limit the content width */
+    margin: 0 auto; /* Center the content horizontally */
 
     .breadcrumbs {
       font-weight: 300;
       text-transform: uppercase;
       font-size: 13px;
       color: #555;
+      margin-bottom: 10px;
     }
 
     h1 {
+      font-size: 24px;
+      margin: 0;
     }
 
     p {
@@ -29,7 +31,7 @@
       display: flex;
       align-items: center;
       justify-content: space-between;
-      margin-bottom: 20px;
+      margin: 20px 0;
 
       .left {
         display: flex;
@@ -38,18 +40,18 @@
         color: #555;
         font-weight: 300;
 
-        input{
+        input {
           padding: 5px;
           border: 1px solid lightgrey;
           border-radius: 5px;
           outline: none;
 
-          &::placeholder{
+          &::placeholder {
             color: #999;
           }
         }
 
-        button{
+        button {
           padding: 5px 10px;
           background-color: #1dbf73;
           color: white;
@@ -58,21 +60,16 @@
           border-radius: 5px;
           cursor: pointer;
         }
-
       }
 
       .right {
-        position: relative;
         display: flex;
         align-items: center;
         gap: 10px;
+        color: #555;
+        font-weight: 300;
 
         .sortBy {
-          color: #555;
-          font-weight: 300;
-        }
-
-        .sortType {
           font-weight: 500;
         }
 
@@ -104,8 +101,8 @@
 
     .cards {
       display: flex;
-      justify-content: space-between;
       flex-wrap: wrap;
+      gap: 20px; /* Add some spacing between the cards */
     }
   }
 }
