--- a/src/pages/gig/Gig.scss
+++ b/src/pages/gig/Gig.scss
@@ -1,6 +1,7 @@
 .gig {
   display: flex;
   justify-content: center;
+  margin-top: 2000px;
 
   .container {
     width: 1400px;
@@ -60,7 +61,7 @@
       }
 
       .slider {
-        background-color: #F5F5F5;
+        background-color: #f5f5f5;
         img {
           max-height: 500px;
           object-fit: contain;
@@ -239,16 +240,16 @@
         align-items: center;
         justify-content: space-between;
 
-        h2{
+        h2 {
           font-weight: 300;
         }
 
-        h3{
+        h3 {
           font-weight: 500;
         }
       }
 
-      p{
+      p {
         color: gray;
         margin: 10px 0px;
       }
@@ -270,8 +271,8 @@
         }
       }
 
-      .features{
-        .item{
+      .features {
+        .item {
           display: flex;
           align-items: center;
           gap: 10px;
@@ -279,13 +280,13 @@
           color: gray;
           margin-bottom: 5px;
 
-          img{
+          img {
             width: 14px;
           }
         }
       }
 
-      button{
+      button {
         background-color: #1dbf73;
         padding: 10px;
         color: white;
