--- a/src/pages/messages/Messages.scss
+++ b/src/pages/messages/Messages.scss
@@ -1,6 +1,7 @@
 .messages {
   display: flex;
   justify-content: center;
+  margin-top: 1370px;
 
   .container {
     width: 1400px;
@@ -34,7 +35,7 @@
           &:first-child {
             font-weight: 500;
           }
-          
+
           &:nth-child(2),
           &:nth-child(3) {
             color: gray;
