--- a/src/pages/orders/Orders.scss
+++ b/src/pages/orders/Orders.scss
@@ -2,6 +2,8 @@
   display: flex;
   justify-content: center;
   color: #555;
+  margin-top: 870px;
+  width: 100%;
 
   .container {
     width: 1400px;
@@ -30,8 +32,7 @@
           text-align: left;
         }
         td {
-          
-          sup{
+          sup {
             font-size: 12px;
           }
 
